--- a/csharp/GUI/App.xaml
+++ b/csharp/GUI/App.xaml
@@ -21,6 +21,7 @@
             <local:CollectionElementConverter x:Key="CollectionElementConverter"/>
             <local:BooleanNotOperationConverter x:Key="BooleanNotOperationConverter"/>
             <local:BooleanOrOperationConverter x:Key="BooleanOrOperationConverter"/>
+            <local:BooleanSwitchOperationConverter x:Key="BooleanSwitchOperationConverter"/>
             <local:PluginToFormatConverter x:Key="PluginToFormatConverter"/>
             <local:DoubleConstantSubConverter x:Key="DoubleConstantSubConverter"/>
             <local:IntegerConstantEqualsConverter x:Key="IntegerConstantEqualsConverter"/>
