--- a/csharp/GUI/App.xaml
+++ b/csharp/GUI/App.xaml
@@ -28,6 +28,7 @@
             <local:PluginToFormatConverter x:Key="PluginToFormatConverter"/>
             <local:DoubleConstantSubConverter x:Key="DoubleConstantSubConverter"/>
             <local:IntegerConstantEqualsConverter x:Key="IntegerConstantEqualsConverter"/>
+            <local:DoubleSubConverter x:Key="DoubleSubConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
